<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">胎教小工具</string>
    <string name="futus_story">胎教故事</string>
    <string name="futus_music">胎教音乐</string>

    <array name="drawble_left_list">
        <item >"胎教故事"</item>
        <item >"胎教音乐"</item>
    </array>
    <string name="latest">最新</string>
    <string name="hotst">最热</string>
    <string name="load_all_data">已加载完所有数据</string>
    <string name="click_to_login">点击登录</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="collect_cancel">收藏已取消</string>
    <string name="collect_cancel_fail">收藏取消失败</string>
    <string name="login">登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="regist">注册</string>
    <string name="regist_success">注册成功</string>
    <string name="regist_fail">注册失败</string>
    <string name="user_infp">用户详情</string>
    <string name="mine_futus_collections">我的故事</string>
    <string name="mine_musci_collections">我的音乐</string>
    <string name="mine_head_icon">我的头像</string>
    <string name="mine_username">我的用户名</string>
    <string name="mine_email">我的邮箱</string>
    <string name="logout">退出登录</string>
    <string name="recent_look">最近浏览</string>
    <string name="fail_count_data">查询数据失败</string>
    <string name="load_all">数据已全部加载</string>
    <string name="double_click_out_welcome_again">双击退出,欢迎下次再来</string>
    <string name="load_fail_hint">加载失败，请下拉刷新重新加载</string>
    <string name="feedback_idea">意见反馈</string>
    <string name="update_str">检查更新</string>
    <string name="user_name">姓名</string>
    <string name="can_choice_str">可选</string>
</resources>
