<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="@dimen/left_menu_width"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/user_center_bg"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            >
            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/head_img"
                android:layout_width="50dip"
                android:layout_height="50dip"
                fresco:roundedCornerRadius="25dip"
                fresco:placeholderImage="@mipmap/load_default"
                fresco:placeholderImageScaleType="fitCenter"
                android:layout_centerVertical="true"
                />
            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/head_img"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:text="@string/click_to_login"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@android:color/white"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>
        <TextView
            android:id="@+id/story_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/futus_story"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/music_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/futus_music"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            />
        <TextView
            android:id="@+id/uploadfile_text"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="上传文件"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            />

    </LinearLayout>
</LinearLayout>