<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/header_layout"
                android:layout_width="match_parent"
                android:layout_height="80dip"
                android:orientation="horizontal"
                android:paddingLeft="10dip"
                android:paddingRight="15dip"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="center_vertical"
                    style="@style/regist_text_style"
                    android:text="@string/mine_head_icon"
                    />
                <ImageView
                    android:id="@+id/arrow_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/icon_right_arrow"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/user_img"
                    android:layout_width="60dip"
                    android:layout_height="60dip"
                    android:layout_centerVertical="true"
                    fresco:placeholderImage="@mipmap/load_default"
                    fresco:placeholderImageScaleType="fitCenter"
                    fresco:roundedCornerRadius="25dip"
                    android:layout_toLeftOf="@id/arrow_head"
                    android:layout_marginRight="15dip"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dip"
                android:layout_marginLeft="@dimen/mine_layout_margin"
                android:layout_marginRight="@dimen/mine_layout_margin"
                android:layout_marginBottom="@dimen/mine_layout_margin"
                android:layout_marginTop="20dip"
                android:background="@drawable/pic_btn_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="center_vertical"
                    style="@style/regist_text_style"
                    android:text="@string/mine_username"
                    />

                <TextView
                    android:id="@+id/usename_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="center_vertical"
                    style="@style/regist_use_text_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="55dip"
                android:layout_margin="@dimen/mine_layout_margin"
                android:background="@drawable/pic_btn_bg"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="center_vertical"
                    style="@style/regist_text_style"
                    android:text="@string/mine_email"
                    />

                <TextView
                    android:id="@+id/email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="center_vertical"
                    style="@style/regist_use_text_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/recent_look_text"
                android:layout_width="match_parent"
                android:layout_height="55dip"
                android:background="@drawable/pic_btn_bg"
                android:layout_margin="@dimen/mine_layout_margin"
                style="@style/regist_text_style"
                android:text="@string/recent_look"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:drawableRight="@mipmap/icon_right_arrow"
                />
            <TextView
                android:id="@+id/collect_text"
                android:layout_width="match_parent"
                android:layout_height="55dip"
                android:background="@drawable/pic_btn_bg"
                android:layout_margin="@dimen/mine_layout_margin"
                style="@style/regist_text_style"
                android:text="@string/mine_collections"
                android:gravity="center_vertical"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:drawableRight="@mipmap/icon_right_arrow"
                />
            <TextView
                android:id="@+id/logout_text"
                android:layout_width="match_parent"
                android:layout_height="55dip"
                android:background="@drawable/common_btn_red_normal"
                android:layout_marginTop="25dip"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:text="@string/logout"
                android:textSize="22sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>