<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@color/title_bg">

        <ImageView
            android:id="@+id/back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="10dip"
            android:src="@mipmap/back_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback_idea"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_item_height"
        android:orientation="horizontal"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_name"
            style="@style/regist_text_style"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/feedback_item_txt_padd"
            android:background="@android:color/transparent"
            android:hint="@string/can_choice_str"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/dot_uncheck_color"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_item_height"
        android:orientation="horizontal"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_name"
            style="@style/regist_text_style"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/feedback_item_txt_padd"
            android:background="@android:color/transparent"
            android:hint="@string/can_choice_str"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/dot_uncheck_color"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_item_height"
        android:orientation="horizontal"
        android:paddingLeft="8dip"
        android:paddingRight="8dip"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/user_name"
            style="@style/regist_text_style"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/feedback_item_txt_padd"
            android:background="@android:color/transparent"
            android:hint="@string/can_choice_str"
            android:gravity="center_vertical|left"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/dot_uncheck_color"
        />
</LinearLayout>